@@ -1,3 +1,5 @@
+- add helper to get kernel module path (to be used in draklive)
+
 Version 10.4.228 - 3 October 2007, by Pascal "Pixel" Rigaux
 
 - use /dev/cdrom in fstab, and write corresponding udev rule
